--- a/app/src/main/res/layout/charecter_item.xml
+++ b/app/src/main/res/layout/charecter_item.xml
@@ -1,60 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    android:layout_margin="10dp"
-    android:background="#000"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="16dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    app:contentPadding="8dp">
 
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.cardview.widget.CardView
-        android:padding="10dp"
-        android:layout_margin="5dp"
-
-        app:cardCornerRadius="15dp"
-        android:elevation="5dp"
-
-
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:paddingBottom="10dp"
-            android:background="#333333"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_launcher_background"
-                android:id="@+id/character_image"
-                android:layout_width="match_parent"
-                android:layout_height="500dp"/>
 
-            <TextView
-                android:textColor="#FFF"
-                android:id="@+id/character_name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:text="Character Name here"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="18sp" />
-            <TextView
-                android:textColor="#FFF"
-                android:id="@+id/actor_name"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:text="Actor Name here"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/characterImage"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@mipmap/ic_launcher" />
 
-
-
-
-
-</LinearLayout>
+        <TextView
+            android:id="@+id/actorName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@id/characterImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/characterImage"
+            app:layout_constraintTop_toTopOf="@id/characterImage"
+            tools:src="@mipmap/ic_launcher"
+            tools:text="Demo" />
+        <TextView
+            android:id="@+id/characterName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@id/characterImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/characterImage"
+            app:layout_constraintTop_toTopOf="@id/characterImage"
+            tools:src="@mipmap/ic_launcher"
+            tools:text="Demo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
