--- a/app/src/main/res/layout/charecter_item.xml
+++ b/app/src/main/res/layout/charecter_item.xml
@@ -48,5 +48,15 @@
             app:layout_constraintTop_toTopOf="@id/characterImage"
             tools:src="@mipmap/ic_launcher"
             tools:text="Demo" />
+        <ImageView
+            android:id="@+id/icon_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:clickable="true"
+            android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_baseline_favorite" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
