favori eklendi detay olusturuldu

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,9 +13,6 @@
         <action
             android:id="@+id/action_firstFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
-        <action
-            android:id="@+id/action_firstFragment_to_favoriteFragment2"
-            app:destination="@id/favoriteFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -23,20 +20,26 @@
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" >
         <argument
+
             android:name="charecter"
             app:argType="com.example.breakingbadapp.Model.CharacterModelItem" />
+        <argument
+            android:name="favorite"
+            app:argType="boolean"
+            />
+
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.breakingbadapp.ui.FavoriteFragment"
         android:label="Favorite"
-        tools:layout="@layout/fragment_favorite" />
-    <argument
-        android:name="characterId"
-        android:defaultValue="-1"
-        app:argType="integer" />
-    <argument
-        android:name="isFavorite"
-        android:defaultValue="false"
-        app:argType="boolean" />
+        tools:layout="@layout/fragment_favorite" >
+        <action
+            android:id="@+id/action_navigation_favorites_to_navigation_detail"
+            app:destination="@id/detailFragment"
+            />
+
+
+    </fragment>
+
 </navigation>
