--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,11 +9,11 @@
         android:id="@+id/firstFragment"
         android:name="com.example.breakingbadapp.ui.FirstFragment"
         android:label="fragment_first"
-
         tools:layout="@layout/fragment_first" >
         <action
             android:id="@+id/action_firstFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            app:destination="@id/detailFragment"
+            />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
@@ -49,7 +49,12 @@
         android:label="AuthFragment" >
         <action
             android:id="@+id/action_authFragment_to_firstFragment"
-            app:destination="@id/firstFragment" />
+            app:destination="@id/firstFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"
+
+            />
+
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
@@ -58,10 +63,19 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_authFragment"
-            app:destination="@id/authFragment" />
+            app:destination="@id/authFragment"
+            app:popUpTo="@id/nav_graph" />
         <action
             android:id="@+id/action_splashFragment_to_firstFragment"
-            app:destination="@id/firstFragment" />
+            app:destination="@id/firstFragment"
+            app:popUpTo="@id/nav_graph" />
+
+
+    </fragment>
+    <fragment
+        android:id="@+id/nativeProvidersFragment"
+        android:name="com.example.breakingbadapp.ui.auth.NativeProvidersFragment"
+        android:label="NativeProvidersFragment" >
     </fragment>
 
 </navigation>
