--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -59,7 +59,7 @@
     <fragment
         android:id="@+id/splashFragment"
         android:name="com.example.breakingbadapp.splash.SplashFragment"
-        android:label="fragment_splash"
+        android:label="splash"
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_authFragment"
