--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
+    
     app:startDestination="@id/splashFragment">
 
     <fragment
@@ -45,7 +46,11 @@
             app:destination="@id/detailFragment"
             />
 
-
+        <fragment
+            android:id="@+id/navigation_settings"
+            android:name="com.yonder.weightly.ui.settings.SettingsFragment"
+            android:label="settings"
+            tools:layout="@layout/fragment_settings" />
     </fragment>
     <fragment
         tools:layout="@layout/fragment_auth"
@@ -81,6 +86,15 @@
         android:id="@+id/nativeProvidersFragment"
         android:name="com.example.breakingbadapp.ui.auth.SignInFragment"
         android:label="NativeProvidersFragment" >
+    </fragment>
+    <fragment
+        tools:layout="@layout/fragment_settings"
+        android:id="@+id/navigation_settings"
+        android:name="com.example.breakingbadapp.ui.SettingsFragment"
+        android:label="SettingsFragment" >
+        <action
+            android:id="@+id/action_navigation_settings_to_splashFragment"
+            app:destination="@id/splashFragment" />
     </fragment>
 
 </navigation>
